--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ importlib-metadata==4.10.1
 jmespath==1.0.1
 kombu==5.2.4
 Markdown==3.3.6
-mysqlclient @ file://mysqlclient-1.4.6-cp37-cp37m-win_amd64.whl
+mysqlclient==2.1.0
 packaging==21.3
 prompt-toolkit==3.0.30
 psycopg2-binary==2.9.3
