--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ django-seed==0.3.1
 djangorestframework==3.13.1
 djangorestframework-jwt==1.11.0
 Faker==12.1.0
+freezegun==1.2.1
 funcy==1.17
 idna==3.3
 importlib-metadata==4.10.1
