--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ kombu==5.2.4
 Markdown==3.3.6
 mysqlclient==2.1.0
 packaging==21.3
+Pillow==9.3.0
 prompt-toolkit==3.0.30
 psycopg2-binary==2.9.3
 PyJWT==1.7.1
