--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,23 +19,23 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
     - name: Pull Master Branch
       run: |
-        cd /var/www/프로젝트폴더위치/ && sudo git pull origin master
+        cd /var/www/StoryBuilder/ && sudo git pull origin master
 
     - name: pip Update
       run: |
-        . /var/www/프로젝트폴더위치/venv/bin/activate && pip install -r /var/www/프로젝트폴더위치/requirements.txt
+        . /var/www/StoryBuilder/venv/bin/activate && pip install -r /var/www/StoryBuilder/requirements.txt
     - name: Collectstatic
       run: |
-        . /var/www/프로젝트폴더위치/venv/bin/activate && python /var/www/프로젝트폴더위치/manage.py collectstatic --noinput
+        . /var/www/StoryBuilder/venv/bin/activate && python /var/www/StoryBuilder/manage.py collectstatic --noinput
     - name: Database Update
       run: |
-        . /var/www/프로젝트폴더위치/venv/bin/activate && python /var/www/프로젝트폴더위치/manage.py migrate --noinput
+        . /var/www/StoryBuilder/venv/bin/activate && python /var/www/StoryBuilder/manage.py migrate --noinput
     - name: TestCase
       run: |
-        . /var/www/프로젝트폴더위치/venv/bin/activate && python /var/www/프로젝트폴더위치/manage.py test --noinput
+        . /var/www/StoryBuilder/venv/bin/activate && python /var/www/StoryBuilder/manage.py test --noinput
     - name: cronjob restart
       run: |
-        cat /var/www/프로젝트폴더위치/command.cron | sudo crontab -
+        cat /var/www/StoryBuilder/command.cron | sudo crontab -
         sudo /etc/init.d/cron reload
       continue-on-error: true
     - name: celery restart
