--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,9 @@ jobs:
     - name: Database Update
       run: |
         . /var/www/StoryBuilder/venv/bin/activate && python /var/www/StoryBuilder/manage.py migrate --noinput
+    - name: TEST
+        run: |
+          pwd
     - name: TestCase
       run: |
         . /var/www/StoryBuilder/venv/bin/activate && python /var/www/StoryBuilder/manage.py test --noinput
