--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,12 @@ jobs:
       run: |
         . /var/www/StoryBuilder/venv/bin/activate && python /var/www/StoryBuilder/manage.py migrate --noinput
     - name: TEST
-        run: |
-          pwd
+      run: |
+        pwd
+    - name: TEST2
+      run: |
+        . pwd
+      continue-on-error: true
     - name: TestCase
       run: |
         . /var/www/StoryBuilder/venv/bin/activate && python /var/www/StoryBuilder/manage.py test --noinput
