--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,8 +2,8 @@ name: Lint Check
 
 on:
   pull_request:
-    # needs to create code-review branch
-    branches: [ code-review ]
+    branches:
+      - code-review
 
 jobs:
   build:
@@ -11,16 +11,23 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [ 3.7 ]
+        python-version: [3.7]
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Check out code
+      uses: actions/checkout@v2
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
       with:
-        ref: ${{ github.event.pull_request.head.sha }}
-      env:
-        # need to set github token at github
-        GITHUB_TOKEN: ${{ secrets.TOKEN }}
-        DJANGO_SETTINGS_MODULE: config.settings.development
-    - name: Lint Check
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install dependencies
       run: |
-        flake8 .
+        python -m pip install --upgrade pip
+        pip install flake8
+
+    - name: Lint Check
+      run: flake8 .
+      env:
+        DJANGO_SETTINGS_MODULE: config.settings.development
